added more tests

--- a/spec/expected/interpolation.less
+++ b/spec/expected/interpolation.less
@@ -1,5 +1,5 @@
 @dir: 'dir';
 @filepath: 'filepath';
 .loader-default {
-  background: url("${dir}/${filepath}");
+  background: url("@{dir}/@{filepath}");
 }
