several test fixes and converter improvements

--- a/spec/expected/@import.less
+++ b/spec/expected/@import.less
@@ -1,2 +1,4 @@
 @import "variables.scss";
-@import 'variables.scss';
+@import "vari-ables.scss";
+@import 'variables.css';
+@import "variables.scss";
