fixed import and rgba converters

--- a/spec/expected/@import.less
+++ b/spec/expected/@import.less
@@ -1,4 +1,6 @@
-@import "variables.scss";
-@import "vari-ables.scss";
+@import (optional) "variables.scss";
+@import (optional, reference) "_variables.scss";
+@import (optional) "vari-ables.scss";
+@import (optional, reference) "_vari-ables.scss";
 @import 'variables.css';
 @import "variables.scss";
