--- a/spec/expected/rgba.less
+++ b/spec/expected/rgba.less
@@ -1,1 +1,5 @@
-@fade: fade(#000, (0.4*100)%);
+@color: '#000';
+
+@fade: fade(#000, (0.4*100));
+@also: fade(@{color}, (0.4*100));
+@not: rgba(0,0,0,0.4);
