--- a/spec/expected/@import.less
+++ b/spec/expected/@import.less
@@ -2,5 +2,7 @@
 @import (optional, reference) "_variables.scss";
 @import (optional) "vari-ables.scss";
 @import (optional, reference) "_vari-ables.scss";
+@import (optional) "animation/animation.scss";
+@import (optional, reference) "animation/_animation.scss";
 @import 'variables.css';
 @import "variables.scss";
