added support for relative imports

--- a/spec/expected/@import.less
+++ b/spec/expected/@import.less
@@ -6,3 +6,7 @@
 @import (optional, reference) "animation/_animation.scss";
 @import 'variables.css';
 @import "variables.scss";
+@import (optional) "../variables.scss";
+@import (optional, reference) "../_variables.scss";
+@import (optional) "./variables.scss";
+@import (optional, reference) "./_variables.scss";
