--- a/spec/fixtures/@import.scss
+++ b/spec/fixtures/@import.scss
@@ -3,3 +3,5 @@
 @import "animation/animation";
 @import 'variables.css';
 @import "variables.scss";
+@import "../variables";
+@import "./variables";
