--- a/spec/fixtures/variables.scss
+++ b/spec/fixtures/variables.scss
@@ -22,7 +22,9 @@
 // @debug(something);
 
 // Convert Less variables
+$color: '#000';
 $word: 'word';
 $camelCase: 'camelCase';
 $kebab-case: 'kebab-case';
 $snake_case: 'snake_case';
+$complex: unquote("rgba(#{$color}, 0.87)") !default;
