--- a/spec/expected/@function.less
+++ b/spec/expected/@function.less
@@ -1,5 +1,5 @@
 .function-strip-units(@number) {
-  return @number / (@number * 0 + 1);
+  return: @number / (@number * 0 + 1);
 }
 
 @foo: strip-units(360deg);
