--- a/spec/fixtures/rgba.scss
+++ b/spec/fixtures/rgba.scss
@@ -2,4 +2,5 @@ $color: '#000';
 
 $fade: rgba(#000, 0.4);
 $also: rgba(#{$color}, 0.4);
+$heavy: unquote("rgba(#{$color}, 0.87)");
 $not: rgba(0,0,0,0.4);
