--- a/spec/expected/@import.less
+++ b/spec/expected/@import.less
@@ -1,12 +1,12 @@
 @import (optional) "variables.scss";
-@import (optional, reference) "_variables.scss";
+@import (optional) "_variables.scss";
 @import (optional) "vari-ables.scss";
-@import (optional, reference) "_vari-ables.scss";
+@import (optional) "_vari-ables.scss";
 @import (optional) "animation/animation.scss";
-@import (optional, reference) "animation/_animation.scss";
+@import (optional) "animation/_animation.scss";
 @import 'variables.css';
 @import "variables.scss";
 @import (optional) "../variables.scss";
-@import (optional, reference) "../_variables.scss";
+@import (optional) "../_variables.scss";
 @import (optional) "./variables.scss";
-@import (optional, reference) "./_variables.scss";
+@import (optional) "./_variables.scss";
