change approach on if converter. catches css statements within too

--- a/spec/expected/@if.less
+++ b/spec/expected/@if.less
@@ -1,15 +1,23 @@
 @isActive: false;
 
-.if() when (@isActive) {
+& when (@isActive) {
   @color: 'red';
 }
-.if();
 
-.if() when (@is-false = false) {
+& when (@isActive = false) {
   @foo: 'bar';
 }
-.if();
+
+& when ((@isActive = false)) {
+  html, body {
+    font-size: 14px;
+  }
+}
 
 button {
   color: @color;
+
+  & when (@isActive) {
+    font-size: 13px;
+  }
 }
