--- a/spec/fixtures/@if.scss
+++ b/spec/fixtures/@if.scss
@@ -4,10 +4,20 @@ $isActive: false;
   $color: 'red';
 }
 
-@if $is-false == false {
+@if $isActive == false {
   $foo: 'bar';
+}
+
+@if ($isActive == false) {
+  html, body {
+    font-size: 14px;
+  }
 }
 
 button {
   color: $color;
+
+  @if $isActive {
+    font-size: 13px;
+  }
 }
