--- a/spec/expected/variables.less
+++ b/spec/expected/variables.less
@@ -27,4 +27,4 @@
 @camelCase: 'camelCase';
 @kebab-case: 'kebab-case';
 @snake_case: 'snake_case';
-@complex: ~"fade(@{color}, (0.87*100))";
+@complex: ~"rgba(@{color}, 0.87)";
