fixed rgba convertion

--- a/spec/expected/rgba.less
+++ b/spec/expected/rgba.less
@@ -1,6 +1,5 @@
 @color: '#000';
 
-@fade: rgba(#000, 0.4);
-@also: rgba(@{color}, 0.4);
-@heavy: ~"rgba(@{color}, 0.87)";
-@not: rgba(0,0,0,0.4);
+@convert: fade(#000, (0.4*100));
+@not: ~"rgba(@{color}, 0.87)";
+@nope: rgba(0,0,0,0.4);
