match includes without parameters

--- a/spec/expected/@include.less
+++ b/spec/expected/@include.less
@@ -1,5 +1,5 @@
-.border-radius(@size) {
-  border-radius: @size;
-}
-
+.typo-display-3;
 .border-radius(5px);
+.typo-display-3(@colorContrast: true);
+// @include
+/* @include */
