extended interpolation converter to match complex cases with string interpolation

--- a/spec/expected/interpolation.less
+++ b/spec/expected/interpolation.less
@@ -1,5 +1,8 @@
 @dir: 'dir';
 @filepath: 'filepath';
+@size: 50;
+@columns: 2;
 .loader-default {
   background: url("@{dir}/@{filepath}");
+  width: ((@size / @columns) * 100)~"%";
 }
