allow for @extend p and @extend .h6

--- a/spec/expected/@extend.less
+++ b/spec/expected/@extend.less
@@ -2,6 +2,18 @@
   border: 1px #f00;
 }
 .seriousError {
-  &:extend(.error);
+  &:extend(.error all);
   border-width: 3px;
+}
+p {
+  color: #f00;
+}
+.p {
+  &:extend(p all);
+}
+.som3-thing {
+  color: #0f0;
+}
+.somet1ing-else {
+  &:extend(.som3-thing all)
 }
