--- a/spec/expected/variables.less
+++ b/spec/expected/variables.less
@@ -8,9 +8,9 @@
  opacity: 1;
 }
 
-@-webkit-keyframes fadein { &:extend(.fadeIn); }
-@-moz-keyframes fadein { &:extend(.fadeIn); }
-@keyframes fadein { &:extend(.fadeIn); }
+@-webkit-keyframes fadein { &:extend(.fadeIn all); }
+@-moz-keyframes fadein { &:extend(.fadeIn all); }
+@keyframes fadein { &:extend(.fadeIn all); }
 
 @font-face {
   font-family: 'Open Sans';
